--- a/y2024/Crescendo/WebDash.html
+++ b/y2024/Crescendo/WebDash.html
@@ -90,23 +90,22 @@
         source-provider="NetworkTables"
         style="transform: translate(372px, 315px);"
         source-key="/Chassis/Distance to Speaker"
-        placeholder=""
         min="NaN"
         max="NaN"
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-412"
+            id="vaadin-number-field-2"
             aria-labelledby="label-vaadin-number-field-438"
             aria-describedby=""
-            min="undefined"
-            max="undefined"
+            min="NaN"
+            max="NaN"
             step="any"
         ><label
             slot="label"
             id="label-vaadin-number-field-438"
-            for="vaadin-number-field-412"
+            for="vaadin-number-field-2"
         >Distance To Speaker</label>
         <div
             slot="error-message"
@@ -186,12 +185,11 @@
         source-key="/Arm Pivot Subsystem/Rel Encoder Position"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-2"
+            id="vaadin-number-field-3"
             aria-labelledby="label-vaadin-number-field-632"
             aria-describedby=""
             min="NaN"
@@ -200,7 +198,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-632"
-            for="vaadin-number-field-2"
+            for="vaadin-number-field-3"
         >Rel Arm Angle</label>
         <div
             slot="error-message"
@@ -217,12 +215,11 @@
         source-key="/SmartDashboard/super structure/PivotMotorPercentage"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-3"
+            id="vaadin-number-field-4"
             aria-labelledby="label-vaadin-number-field-633"
             aria-describedby=""
             min="NaN"
@@ -231,7 +228,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-633"
-            for="vaadin-number-field-3"
+            for="vaadin-number-field-4"
         >Percent Output</label>
         <div
             slot="error-message"
@@ -248,12 +245,11 @@
         source-key="/Arm Pivot Subsystem/Abs Encoder Position"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-4"
+            id="vaadin-number-field-5"
             aria-labelledby="label-vaadin-number-field-689"
             aria-describedby=""
             min="NaN"
@@ -262,7 +258,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-689"
-            for="vaadin-number-field-4"
+            for="vaadin-number-field-5"
         >Abs Arm ANgle</label>
         <div
             slot="error-message"
@@ -307,7 +303,6 @@
     tab-name="Shooter"
     slot="tab"
     source-provider="NetworkTables"
-    selected=""
 ><frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(2px, 18px); width: 207px; height: 50px;"
@@ -352,12 +347,11 @@
         source-key="/Shooter Subsystem/Velocity (RPM)"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-5"
+            id="vaadin-number-field-6"
             aria-labelledby="label-vaadin-number-field-556"
             aria-describedby=""
             min="NaN"
@@ -366,7 +360,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-556"
-            for="vaadin-number-field-5"
+            for="vaadin-number-field-6"
         >Shooter RPM</label>
         <div
             slot="error-message"
@@ -383,12 +377,11 @@
         source-key="/SmartDashboard/super structure/ShooterMotorPercentage"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-6"
+            id="vaadin-number-field-7"
             aria-labelledby="label-vaadin-number-field-580"
             aria-describedby=""
             min="NaN"
@@ -397,7 +390,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-580"
-            for="vaadin-number-field-6"
+            for="vaadin-number-field-7"
         >Percent Output</label>
         <div
             slot="error-message"
@@ -418,12 +411,11 @@
         style="transform: translate(466px, 551px);"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-7"
+            id="vaadin-number-field-8"
             aria-labelledby="label-vaadin-number-field-224"
             aria-describedby=""
             min="NaN"
@@ -432,7 +424,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-224"
-            for="vaadin-number-field-7"
+            for="vaadin-number-field-8"
         >Shooter Goal</label>
         <div
             slot="error-message"
@@ -469,6 +461,7 @@
     tab-name="Chassis"
     slot="tab"
     source-provider="NetworkTables"
+    selected=""
 ><frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(7px, 134px); width: 213px; height: 50px;"
@@ -548,6 +541,22 @@
         source-provider="NetworkTables"
         style="transform: translate(513px, 340px);"
         source-key="/Shuffleboard/test commands/Chassis Push Sideways"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(833.2px, 89.6px); width: 196px; height: 50px;"
+        source-key="/Shuffleboard/test commands/Chassis test module 0"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(846px, 154px);"
+        source-key="/Shuffleboard/test commands/Chassis test module 1"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(886px, 239px);"
+        source-key="/Shuffleboard/test commands/Chassis test module 2"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(835.6px, 24.8px);"
+        source-key="/Shuffleboard/test commands/Chassis test module 3"
     ></frc-robot-command></dashboard-tab><dashboard-tab
     tab-name="Pit"
     slot="tab"
@@ -626,12 +635,11 @@
         source-key="/Hanger Subsystem/Left Pos: "
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-8"
+            id="vaadin-number-field-9"
             aria-labelledby="label-vaadin-number-field-2752"
             aria-describedby=""
             min="NaN"
@@ -640,7 +648,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-2752"
-            for="vaadin-number-field-8"
+            for="vaadin-number-field-9"
         >Label</label>
         <div
             slot="error-message"
@@ -657,12 +665,11 @@
         source-key="/Hanger Subsystem/Right Pos"
         min="NaN"
         max="NaN"
-        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-9"
+            id="vaadin-number-field-10"
             aria-labelledby="label-vaadin-number-field-2753"
             aria-describedby=""
             min="NaN"
@@ -671,7 +678,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-2753"
-            for="vaadin-number-field-9"
+            for="vaadin-number-field-10"
         >Label</label>
         <div
             slot="error-message"
@@ -692,11 +699,12 @@
         source-key="/GosCameras/Left Camera/Targets Seen"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-10"
+            id="vaadin-number-field-11"
             aria-labelledby="label-vaadin-number-field-87"
             aria-describedby=""
             min="NaN"
@@ -705,7 +713,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-87"
-            for="vaadin-number-field-10"
+            for="vaadin-number-field-11"
         >Left Seen</label>
         <div
             slot="error-message"
@@ -722,11 +730,12 @@
         source-key="/GosCameras/Left Camera/Average Distance To Target"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-11"
+            id="vaadin-number-field-12"
             aria-labelledby="label-vaadin-number-field-99"
             aria-describedby=""
             min="NaN"
@@ -735,7 +744,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-99"
-            for="vaadin-number-field-11"
+            for="vaadin-number-field-12"
         >Left Avg Distance</label>
         <div
             slot="error-message"
@@ -752,11 +761,12 @@
         source-key="/GosCameras/Center Back Camera/Targets Seen"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-12"
+            id="vaadin-number-field-13"
             aria-labelledby="label-vaadin-number-field-111"
             aria-describedby=""
             min="NaN"
@@ -765,7 +775,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-111"
-            for="vaadin-number-field-12"
+            for="vaadin-number-field-13"
         >Back Seen</label>
         <div
             slot="error-message"
@@ -782,11 +792,12 @@
         source-key="/GosCameras/Center Back Camera/Average Distance To Target"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-13"
+            id="vaadin-number-field-14"
             aria-labelledby="label-vaadin-number-field-123"
             aria-describedby=""
             min="NaN"
@@ -795,7 +806,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-123"
-            for="vaadin-number-field-13"
+            for="vaadin-number-field-14"
         >Back Avg Distance</label>
         <div
             slot="error-message"
@@ -812,11 +823,12 @@
         source-key="/GosCameras/Right Camera/Targets Seen"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-14"
+            id="vaadin-number-field-15"
             aria-labelledby="label-vaadin-number-field-135"
             aria-describedby=""
             min="NaN"
@@ -825,7 +837,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-135"
-            for="vaadin-number-field-14"
+            for="vaadin-number-field-15"
         >Right Seen</label>
         <div
             slot="error-message"
@@ -842,11 +854,12 @@
         source-key="/GosCameras/Right Camera/Average Distance To Target"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-15"
+            id="vaadin-number-field-16"
             aria-labelledby="label-vaadin-number-field-147"
             aria-describedby=""
             min="NaN"
@@ -855,7 +868,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-147"
-            for="vaadin-number-field-15"
+            for="vaadin-number-field-16"
         >Right Avg Distance</label>
         <div
             slot="error-message"
@@ -870,23 +883,22 @@
         source-provider="NetworkTables"
         style="transform: translate(73px, 287px);"
         source-key="/GosCameras/Left Camera/Average Ambiguity"
-        placeholder=""
         min="NaN"
         max="NaN"
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-290"
+            id="vaadin-number-field-17"
             aria-labelledby="label-vaadin-number-field-299"
             aria-describedby=""
-            min="undefined"
-            max="undefined"
+            min="NaN"
+            max="NaN"
             step="any"
         ><label
             slot="label"
             id="label-vaadin-number-field-299"
-            for="vaadin-number-field-290"
+            for="vaadin-number-field-17"
         >Label</label>
         <div
             slot="error-message"
@@ -901,23 +913,22 @@
         source-provider="NetworkTables"
         style="transform: translate(317px, 310px);"
         source-key="/GosCameras/Center Back Camera/Average Ambiguity"
-        placeholder=""
         min="NaN"
         max="NaN"
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-302"
+            id="vaadin-number-field-18"
             aria-labelledby="label-vaadin-number-field-311"
             aria-describedby=""
-            min="undefined"
-            max="undefined"
+            min="NaN"
+            max="NaN"
             step="any"
         ><label
             slot="label"
             id="label-vaadin-number-field-311"
-            for="vaadin-number-field-302"
+            for="vaadin-number-field-18"
         >Label</label>
         <div
             slot="error-message"
@@ -931,23 +942,22 @@
         has-label=""
         source-provider="NetworkTables"
         style="transform: translate(575px, 333px);"
-        placeholder=""
         min="NaN"
         max="NaN"
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-314"
+            id="vaadin-number-field-19"
             aria-labelledby="label-vaadin-number-field-323"
             aria-describedby=""
-            min="undefined"
-            max="undefined"
+            min="NaN"
+            max="NaN"
             step="any"
         ><label
             slot="label"
             id="label-vaadin-number-field-323"
-            for="vaadin-number-field-314"
+            for="vaadin-number-field-19"
         >Label</label>
         <div
             slot="error-message"
